fixed navbar and added in hover option and worked on about me background and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Abel', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('../public/images/background.jpg');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.row {
+  padding: 40px;
+ 
 }
+code {
+  font-family:'Abel', sans-serif;
+}
+.navbar-div{
+  font:'Abel', sans-serif;
+}
+
+.navbar .navbar-nav .nav-item{
+  position:relative;
+  padding: 10%;
+ 
+}
+#about-me{
+  font-size: 25px;
+}
+.navbar .navbar-nav .nav-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  content: '';
+  background: url('../public/images/background.jpg');
+  background-color:black;
+  width: 0;
+  height: 4px;
+}
+.navbar .navbar-nav .nav-item:hover::after {
+  width: 100%;
+} 
+
